--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# Environment files - CRITICAL SECURITY
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Allow .env.example (safe template)
+!.env.example
+
 # Logs
 logs
 *.log
